fixed spacing between nav links on full screen web

--- a/client/styles/components/_nav.scss
+++ b/client/styles/components/_nav.scss
@@ -8,7 +8,7 @@ nav {
 
  .nav-wrapper {
   display: grid;
-  grid-template-columns: 130px 8fr 1fr;
+  grid-template-columns: 130px 6fr 1fr;
   grid-template-areas: "logo . links";
   width: 100%;
   height: 100%;
@@ -29,13 +29,19 @@ nav {
    grid-area: links;
    display: flex;
    align-items: center;
-   justify-content: flex-end;
    height: 100%;
 
-    a {
-     color: white;
-     font-size: 18px;
-    }
+   div {
+     display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+     a {
+      color: white;
+      font-size: 18px;
+     }
+   }
+
   }
  }
 }
